Prevent the reset button from wrapping on medium devices on the public report list page

--- a/hotline/static/css/main.css
+++ b/hotline/static/css/main.css
@@ -348,7 +348,7 @@ small {
 
 @media (min-width: 992px){
     #id_querystring {
-        min-width:350px;
+        min-width:345px;
     }
 }
 
